@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.14'
 }
 
 group = 'org.example'
@@ -9,7 +11,21 @@ repositories {
     mavenCentral()
 }
 
+javafx {
+    version = "21"
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.media', 'javafx.swing', 'javafx.web' ]
+}
+
+application {
+    getMainClass().set('darwin')
+    applicationDefaultJvmArgs =  [
+            "--add-opens=javafx.controls/javafx.scene.control.skin=com.pixelduke.fxskins"
+    ]
+}
+
 dependencies {
+    implementation 'org.jfxtras:jmetro:11.6.14'
+    implementation 'org.controlsfx:controlsfx:11.2.1'
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
